--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,7 @@
 @import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -22,4 +22,130 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin-top: 36px;
+  margin-left: 156px;
+  /* background: #e6e6e9; */
+}
+
+/*  & #region MAIN PAGE */
+
+.main-button {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  background-color: #4e75ff;
+  padding: 10px 20px;
+  border-radius: 8px;
+  width: 156px;
+  margin-top: 32px;
+}
+
+.main-button:hover {
+  background-color: #6c8cff;
+}
+
+.nav.home {
+  margin-bottom: 12px;
+}
+
+.nav.home a:hover {
+  font-weight: bold;
+}
+
+/* #endregion MAIN PAGE*/
+
+.timer {
+  display: flex;
+  /* justify-content: center; */
+}
+
+.field {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 24px;
+  margin-right: 24px;
+}
+
+.value {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+  text-transform: uppercase;
+}
+
+input {
+  width: 272px;
+  height: 40px;
+}
+
+#datetime-picker {
+  padding: 8px 12px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+
+  font-family: Montserrat;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  cursor: not-allowed; 
+}
+
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background: #4e75ff;
+  border: none;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  margin-left: 8px;
+}
+
+button:hover {
+  background: #6c8cff;
+}
+
+button:disabled {
+  background: #cfcfcf;
+  color: #989898;
+}
+
+/*  */
+
+.flatpickr-rContainer,
+.numInputWrapper,
+.flatpickr-months,
+.flatpickr-time.time24hr
+{
+  background: #f5f5f5;
 }
